--- a/src/css/main.css
+++ b/src/css/main.css
@@ -596,9 +596,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em {
 	text-align: left;
 	width: calc(100% + 4px);
 	height: calc(100% + 4px);
-	-webkit-transform: translate(-50%, -50%);
-	    -ms-transform: translate(-50%, -50%);
-	        transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	    transform: translate(-50%, -50%);
 	-o-object-fit: cover;
 	   object-fit: cover;
 	font-family: "object-fit: cover";
@@ -611,9 +610,8 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em {
 	padding-right: 0 !important;
 	padding-left: 0 !important;
 	margin: 0;
-	-webkit-transform: translate(-50%, -50%);
-	    -ms-transform: translate(-50%, -50%);
-	        transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	    transform: translate(-50%, -50%);
 	z-index: 10;
 	font-size: 4.8rem;
 	line-height: 1.25;
@@ -744,51 +742,37 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em {
 /* content img end */
 /* columnize */
 .columnize, .columnize--3, .columnize--4 {
-	-webkit-column-count: 2;
-	   -moz-column-count: 2;
-	        column-count: 2;
-	-webkit-column-gap: 2em;
-	   -moz-column-gap: 2em;
-	        column-gap: 2em;
+	column-count: 2;
+	column-gap: 2em;
 	margin-bottom: 2.4rem;
 	font-size: 0.9em;
 }
 
 .columnize--3 {
-	-webkit-column-count: 3;
-	   -moz-column-count: 3;
-	        column-count: 3;
+	column-count: 3;
 	font-size: 0.85em;
 }
 
 .columnize--4 {
-	-webkit-column-count: 4;
-	   -moz-column-count: 4;
-	        column-count: 4;
+	column-count: 4;
 	font-size: 0.8em;
 }
 
 @media (max-width: 1199px) {
 	.columnize--4 {
-		-webkit-column-count: 3;
-		   -moz-column-count: 3;
-		        column-count: 3;
+		column-count: 3;
 	}
 }
 
 @media (max-width: 991px) {
 	.columnize--3, .columnize--4 {
-		-webkit-column-count: 2;
-		   -moz-column-count: 2;
-		        column-count: 2;
+		column-count: 2;
 	}
 }
 
 @media (max-width: 767px) {
 	.columnize, .columnize--3, .columnize--4 {
-		-webkit-column-count: 1;
-		   -moz-column-count: 1;
-		        column-count: 1;
+		column-count: 1;
 	}
 }
 
@@ -1239,9 +1223,8 @@ table td, table th {
 	top: 50%;
 	left: 50%;
 	border: 0 solid white;
-	-webkit-transform: none;
-	    -ms-transform: none;
-	        transform: none;
+	-ms-transform: none;
+	    transform: none;
 }
 
 .btn-with-arrow > i::before {
@@ -1256,9 +1239,8 @@ table td, table th {
 	width: 12px;
 	height: 12px;
 	border-width: 2px 0 0 2px;
-	-webkit-transform: rotate(-45deg);
-	    -ms-transform: rotate(-45deg);
-	        transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	    transform: rotate(-45deg);
 	margin: 3px 0 0 -13px;
 }
 
@@ -1298,10 +1280,8 @@ table td, table th {
 	font-size: 0;
 	letter-spacing: -4px;
 	white-space: nowrap;
-	-webkit-transition-property: background-color, opacity, visibility;
 	transition-property: background-color, opacity, visibility;
-	-webkit-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
 @media (max-width: 639px) {
@@ -1362,24 +1342,20 @@ table td, table th {
 	height: 3px;
 	border-radius: 2px;
 	background: #262626;
-	-webkit-transition-property: background-color;
 	transition-property: background-color;
-	-webkit-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
 .btn-popup-close > i::before {
 	top: 0;
-	-webkit-transform: rotate(-45deg);
-	    -ms-transform: rotate(-45deg);
-	        transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	    transform: rotate(-45deg);
 }
 
 .btn-popup-close > i::after {
 	top: 0;
-	-webkit-transform: rotate(45deg);
-	    -ms-transform: rotate(45deg);
-	        transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	    transform: rotate(45deg);
 }
 
 .no-touchevents .btn-popup-close:hover {
@@ -1470,21 +1446,15 @@ label, .label {
 }
 
 .form-columnize {
-	-webkit-column-count: 2;
-	   -moz-column-count: 2;
-	        column-count: 2;
+	column-count: 2;
 }
 
 .form-columnize--3 {
-	-webkit-column-count: 3;
-	   -moz-column-count: 3;
-	        column-count: 3;
+	column-count: 3;
 }
 
 .form-columnize, .form-columnize--3 {
-	-webkit-column-gap: 40px;
-	   -moz-column-gap: 40px;
-	        column-gap: 40px;
+	column-gap: 40px;
 }
 
 .form-columnize label, .form-columnize--3 label {
@@ -1496,12 +1466,8 @@ label, .label {
 
 @media (max-width: 639px) {
 	.form-columnize, .form-columnize--3 {
-		-webkit-column-count: 1;
-		   -moz-column-count: 1;
-		        column-count: 1;
-		-webkit-column-gap: 0;
-		   -moz-column-gap: 0;
-		        column-gap: 0;
+		column-count: 1;
+		column-gap: 0;
 	}
 }
 
@@ -1581,33 +1547,28 @@ textarea {
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 	color: #a6a6a6;
-	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input:-moz-placeholder, textarea:-moz-placeholder {
 	color: #a6a6a6;
-	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
 	opacity: 1;
 	color: #a6a6a6;
-	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	opacity: 1;
 	color: #a6a6a6;
-	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input.placeholder, textarea.placeholder {
 	color: #a6a6a6;
-	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
@@ -1633,13 +1594,38 @@ input.placeholder:focus, textarea.placeholder:focus {
 
 input[type="text"][disabled], input[type="password"][disabled], input[type="email"][disabled], input[type="search"][disabled], textarea[disabled] {
 	cursor: default;
+	color: #bebebe;
+	background-color: #ebebe4;
+	border-color: #ebebe4;
 }
 
-input[type="text"]:not([disabled]):hover, input[type="password"]:not([disabled]):hover, input[type="email"]:not([disabled]):hover, input[type="search"]:not([disabled]):hover, textarea:not([disabled]):hover {
+input[type="text"][disabled]::-webkit-input-placeholder, input[type="password"][disabled]::-webkit-input-placeholder, input[type="email"][disabled]::-webkit-input-placeholder, input[type="search"][disabled]::-webkit-input-placeholder, textarea[disabled]::-webkit-input-placeholder {
+	color: #bebebe;
+}
+
+input[type="text"][disabled]:-moz-placeholder, input[type="password"][disabled]:-moz-placeholder, input[type="email"][disabled]:-moz-placeholder, input[type="search"][disabled]:-moz-placeholder, textarea[disabled]:-moz-placeholder {
+	color: #bebebe;
+}
+
+input[type="text"][disabled]::-moz-placeholder, input[type="password"][disabled]::-moz-placeholder, input[type="email"][disabled]::-moz-placeholder, input[type="search"][disabled]::-moz-placeholder, textarea[disabled]::-moz-placeholder {
+	opacity: 1;
+	color: #bebebe;
+}
+
+input[type="text"][disabled]:-ms-input-placeholder, input[type="password"][disabled]:-ms-input-placeholder, input[type="email"][disabled]:-ms-input-placeholder, input[type="search"][disabled]:-ms-input-placeholder, textarea[disabled]:-ms-input-placeholder {
+	opacity: 1;
+	color: #bebebe;
+}
+
+input[type="text"][disabled].placeholder, input[type="password"][disabled].placeholder, input[type="email"][disabled].placeholder, input[type="search"][disabled].placeholder, textarea[disabled].placeholder {
+	color: #bebebe;
+}
+
+input[type="text"]:not([disabled]):not(.error):not(.success):not(.input--has-value):hover, input[type="password"]:not([disabled]):not(.error):not(.success):not(.input--has-value):hover, input[type="email"]:not([disabled]):not(.error):not(.success):not(.input--has-value):hover, input[type="search"]:not([disabled]):not(.error):not(.success):not(.input--has-value):hover, textarea:not([disabled]):not(.error):not(.success):not(.input--has-value):hover {
 	border-color: #a6a6a6;
 }
 
-input[type="text"]:not([disabled]):focus, input[type="password"]:not([disabled]):focus, input[type="email"]:not([disabled]):focus, input[type="search"]:not([disabled]):focus, textarea:not([disabled]):focus {
+input[type="text"]:not([disabled]):not(.error):not(.success):not(.input--has-value):focus, input[type="password"]:not([disabled]):not(.error):not(.success):not(.input--has-value):focus, input[type="email"]:not([disabled]):not(.error):not(.success):not(.input--has-value):focus, input[type="search"]:not([disabled]):not(.error):not(.success):not(.input--has-value):focus, textarea:not([disabled]):not(.error):not(.success):not(.input--has-value):focus {
 	border-color: #a6a6a6;
 	cursor: text;
 }
@@ -1701,10 +1687,6 @@ input[type="text"].error:-ms-input-placeholder, input[type="password"].error:-ms
 
 input[type="text"].error.placeholder, input[type="password"].error.placeholder, input[type="email"].error.placeholder, input[type="search"].error.placeholder, textarea.error.placeholder {
 	color: red;
-}
-
-input[type="text"].input--focus, input[type="password"].input--focus, input[type="email"].input--focus, input[type="search"].input--focus, textarea.input--focus {
-	border-color: #a6a6a6;
 }
 
 /* inputs states end */
@@ -1813,23 +1795,19 @@ input[type="checkbox"] ~ span::after {
 
 input[type="checkbox"] ~ label > span::before,
 input[type="checkbox"] ~ span::before {
-	-webkit-transform: rotate(45deg);
-	    -ms-transform: rotate(45deg);
-	        transform: rotate(45deg);
-	-webkit-transform-origin: 0 10px;
-	    -ms-transform-origin: 0 10px;
-	        transform-origin: 0 10px;
+	-ms-transform: rotate(45deg);
+	    transform: rotate(45deg);
+	-ms-transform-origin: 0 10px;
+	    transform-origin: 0 10px;
 	z-index: 1;
 }
 
 input[type="checkbox"] ~ label > span::after,
 input[type="checkbox"] ~ span::after {
-	-webkit-transform: rotate(-50deg);
-	    -ms-transform: rotate(-50deg);
-	        transform: rotate(-50deg);
-	-webkit-transform-origin: 0 10px;
-	    -ms-transform-origin: 0 10px;
-	        transform-origin: 0 10px;
+	-ms-transform: rotate(-50deg);
+	    transform: rotate(-50deg);
+	-ms-transform-origin: 0 10px;
+	    transform-origin: 0 10px;
 	left: 22px;
 }
 
@@ -1908,12 +1886,9 @@ input[type="radio"] ~ i::after {
 	border-radius: 50%;
 	overflow: hidden;
 	background: #ff3aa3;
-	-webkit-animation: bounceout 0s;
-	        animation: bounceout 0s;
-	-webkit-animation-iteration-count: 1;
-	        animation-iteration-count: 1;
-	-webkit-animation-fill-mode: forwards;
-	        animation-fill-mode: forwards;
+	animation: bounceout 0s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
 	opacity: 0;
 }
 
@@ -1928,82 +1903,38 @@ input[type="radio"]:checked ~ span::before {
 
 input[type="radio"]:checked ~ label > span::after,
 input[type="radio"]:checked ~ i::after {
-	-webkit-animation: bounce 0.3s;
-	        animation: bounce 0.3s;
-	-webkit-animation-iteration-count: 1;
-	        animation-iteration-count: 1;
+	animation: bounce 0.3s;
+	animation-iteration-count: 1;
 	opacity: 1;
 	background-color: #ff3aa3;
 }
 
-@-webkit-keyframes bounce {
-	0% {
-		-webkit-transform: scale(0.8);
-		        transform: scale(0.8);
-		opacity: 0.4;
-	}
-	50% {
-		-webkit-transform: scale(1.4);
-		        transform: scale(1.4);
-		opacity: 1;
-	}
-	100% {
-		-webkit-transform: scale(1);
-		        transform: scale(1);
-		opacity: 1;
-	}
-}
-
 @keyframes bounce {
 	0% {
-		-webkit-transform: scale(0.8);
-		        transform: scale(0.8);
+		transform: scale(0.8);
 		opacity: 0.4;
 	}
 	50% {
-		-webkit-transform: scale(1.4);
-		        transform: scale(1.4);
+		transform: scale(1.4);
 		opacity: 1;
 	}
 	100% {
-		-webkit-transform: scale(1);
-		        transform: scale(1);
+		transform: scale(1);
 		opacity: 1;
-	}
-}
-
-@-webkit-keyframes bounceout {
-	0% {
-		-webkit-transform: scale(0);
-		        transform: scale(0);
-		opacity: 1;
-	}
-	50% {
-		-webkit-transform: scale(1.4);
-		        transform: scale(1.4);
-		opacity: 1;
-	}
-	100% {
-		-webkit-transform: scale(0);
-		        transform: scale(0);
-		opacity: 0.4;
 	}
 }
 
 @keyframes bounceout {
 	0% {
-		-webkit-transform: scale(0);
-		        transform: scale(0);
+		transform: scale(0);
 		opacity: 1;
 	}
 	50% {
-		-webkit-transform: scale(1.4);
-		        transform: scale(1.4);
+		transform: scale(1.4);
 		opacity: 1;
 	}
 	100% {
-		-webkit-transform: scale(0);
-		        transform: scale(0);
+		transform: scale(0);
 		opacity: 0.4;
 	}
 }
@@ -2222,16 +2153,14 @@ input[type="radio"]:disabled ~ i::after {
 
 .select::before,
 .select2-container--default .select2-selection--single .select2-selection__arrow b::before {
-	-webkit-transform: rotate(45deg);
-	    -ms-transform: rotate(45deg);
-	        transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	    transform: rotate(45deg);
 }
 
 .select::after,
 .select2-container--default .select2-selection--single .select2-selection__arrow b::after {
-	-webkit-transform: rotate(-45deg);
-	    -ms-transform: rotate(-45deg);
-	        transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	    transform: rotate(-45deg);
 	right: 17px;
 }
 
@@ -2636,10 +2565,8 @@ form .success + .select2 + .error-note + .success-note {
 	box-shadow: none;
 	opacity: 1;
 	z-index: 6;
-	-webkit-transition-property: background, opacity, visibility;
 	transition-property: background, opacity, visibility;
-	-webkit-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
 .no-touchevents .slick-arrow:hover {
@@ -2670,9 +2597,8 @@ form .success + .select2 + .error-note + .success-note {
 	pointer-events: none;
 	width: 12px;
 	height: 12px;
-	-webkit-transform: rotate(45deg);
-	    -ms-transform: rotate(45deg);
-	        transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	    transform: rotate(45deg);
 	border: 0 solid #000;
 }
 
@@ -2729,12 +2655,8 @@ form .success + .select2 + .error-note + .success-note {
 	border-radius: 50%;
 	background: #ffa43f;
 	position: relative;
-	-webkit-transition-property: background, border, box-shadow, -webkit-transform;
-	transition-property: background, border, box-shadow, -webkit-transform;
 	transition-property: background, border, box-shadow, transform;
-	transition-property: background, border, box-shadow, transform, -webkit-transform;
-	-webkit-transition-duration: 0.6s;
-	        transition-duration: 0.6s;
+	transition-duration: 0.6s;
 }
 
 .slick-dots li button::before {
@@ -2748,12 +2670,8 @@ form .success + .select2 + .error-note + .success-note {
 	border-radius: 50%;
 	opacity: 1;
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-	-webkit-transition-property: opacity, -webkit-transform;
-	transition-property: opacity, -webkit-transform;
 	transition-property: transform, opacity;
-	transition-property: transform, opacity, -webkit-transform;
-	-webkit-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
 .slick-dots li.slick-active button::before {
@@ -2856,9 +2774,8 @@ form .success + .select2 + .error-note + .success-note {
 	right: 0;
 	left: auto;
 	top: 100%;
-	-webkit-transform: translate(0, 0);
-	    -ms-transform: translate(0, 0);
-	        transform: translate(0, 0);
+	-ms-transform: translate(0, 0);
+	    transform: translate(0, 0);
 }
 
 .images-slider .slick-prev {
@@ -2892,12 +2809,8 @@ form .success + .select2 + .error-note + .success-note {
 	border-radius: 50%;
 	background-color: white;
 	opacity: 0.5;
-	-webkit-transition-property: opacity, -webkit-transform;
-	transition-property: opacity, -webkit-transform;
 	transition-property: opacity, transform;
-	transition-property: opacity, transform, -webkit-transform;
-	-webkit-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
 .images-slider .slick-dots li button::before, .user-content .images-slider .slick-dots li button::before {
@@ -2910,9 +2823,8 @@ form .success + .select2 + .error-note + .success-note {
 
 .no-touchevents .images-slider .slick-dots li:hover button, .no-touchevents .user-content .images-slider .slick-dots li:hover button {
 	opacity: 1;
-	-webkit-transform: scale(2);
-	    -ms-transform: scale(2);
-	        transform: scale(2);
+	-ms-transform: scale(2);
+	    transform: scale(2);
 }
 
 /* images slider end */
@@ -3301,23 +3213,14 @@ form .success + .select2 + .error-note + .success-note {
 }
 
 .wrapper {
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-webkit-box-pack: justify;
-	-webkit-justify-content: space-between;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-	-webkit-box-align: stretch;
-	-webkit-align-items: stretch;
-	    -ms-flex-align: stretch;
-	        align-items: stretch;
+	-ms-flex-direction: column;
+	    flex-direction: column;
+	-ms-flex-pack: justify;
+	    justify-content: space-between;
+	-ms-flex-align: stretch;
+	    align-items: stretch;
 	margin: 0 auto;
 	min-height: 100%;
 	overflow: hidden;
@@ -3327,13 +3230,10 @@ form .success + .select2 + .error-note + .success-note {
 /* === LAYOUT end === */
 /* === CONTENT === */
 .main {
-	-webkit-flex-shrink: 1;
-	    -ms-flex-negative: 1;
-	        flex-shrink: 1;
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
-	        flex-grow: 1;
+	-ms-flex-negative: 1;
+	    flex-shrink: 1;
+	-ms-flex-positive: 1;
+	    flex-grow: 1;
 	position: relative;
 	clear: both;
 	z-index: 4;
@@ -3433,9 +3333,8 @@ form .success + .select2 + .error-note + .success-note {
 	position: absolute;
 	right: 0;
 	top: 50%;
-	-webkit-transform: translate(0, -50%);
-	    -ms-transform: translate(0, -50%);
-	        transform: translate(0, -50%);
+	-ms-transform: translate(0, -50%);
+	    transform: translate(0, -50%);
 	line-height: 0;
 	pointer-events: none;
 }
@@ -3559,13 +3458,10 @@ li:hover > .nav__drop {
 
 .footer-bottom__holder {
 	position: relative;
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-flex-wrap: wrap;
-	    -ms-flex-wrap: wrap;
-	        flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	margin-right: -15px;
 	margin-left: -15px;
 	margin-bottom: -14px;
@@ -3675,9 +3571,8 @@ li:hover > .nav__drop {
 }
 
 .no-touchevents a:hover .developer__logo::after {
-	-webkit-transform: translate(0, -1px);
-	    -ms-transform: translate(0, -1px);
-	        transform: translate(0, -1px);
+	-ms-transform: translate(0, -1px);
+	    transform: translate(0, -1px);
 }
 
 /* developer end */
@@ -3836,9 +3731,8 @@ li:hover > .nav__drop {
 		bottom: auto !important;
 		padding: 0 !important;
 		margin: 0 !important;
-		-webkit-transform: none !important;
-		    -ms-transform: none !important;
-		        transform: none !important;
+		-ms-transform: none !important;
+		    transform: none !important;
 		text-align: left !important;
 		border: none !important;
 		box-shadow: none !important;
