--- a/src/sass/forms/_selects.sass
+++ b/src/sass/forms/_selects.sass
@@ -45,11 +45,11 @@
 
 	//form hover
 	&:hover
-		border-color: $form-border-focus-color
+		border-color: $form-border-color--focus
 
 	//form focus
 	&:focus
-		border-color: $form-border-focus-color
+		border-color: $form-border-color--focus
 		cursor: text
 
 	// has value (js)
