--- a/src/sass/forms/_forms.sass
+++ b/src/sass/forms/_forms.sass
@@ -156,15 +156,23 @@ input, textarea
 #{$inputs-list}
 	&[disabled]
 		cursor: default
+		color: $form-text-color--disabled
+		background-color: $form-bg-color--disabled
+		border-color: $form-border-color--disabled
+
+		+placeholder
+			color: $form-text-color--disabled
 
 	//form hover
-	&:not([disabled]):hover
-		border-color: $form-border-focus-color
+	&:not([disabled]):not(.error):not(.success):not(.input--has-value)
+		&:hover
+			border-color: $form-border-color--focus
 
 	//form focus
-	&:not([disabled]):focus
-		border-color: $form-border-focus-color
-		cursor: text
+	&:not([disabled]):not(.error):not(.success):not(.input--has-value)
+		&:focus
+			border-color: $form-border-color--focus
+			cursor: text
 
 	// has value (js)
 	@at-root label, &
@@ -192,9 +200,9 @@ input, textarea
 			color: $form-error-color
 
 	// on focus (js)
-	&
-		&.input--focus
-			+form-on-focus
+	// if need change label
+	//&.input--focus
+		+form-on-focus
 
 /* inputs states end
 
