--- a/src/sass/forms/_select2.sass
+++ b/src/sass/forms/_select2.sass
@@ -98,7 +98,7 @@
 
 	&.select2-container--focus, &.select2-container--open
 		.select2-selection--multiple, .select2-selection--single
-			border: #{$form-border-width} solid #{$form-border-focus-color}
+			border: #{$form-border-width} solid #{$form-border-color--focus}
 
 	.select2-search--dropdown
 		.select2-search__field
@@ -110,7 +110,7 @@
 			line-height: 24px
 
 			&:focus
-				border-color: $form-border-focus-color
+				border-color: $form-border-color--focus
 				//box-shadow: inset 0 0 0 1px $form-border-focus-color
 				box-shadow: none
 
@@ -127,7 +127,7 @@
 
 // dropdown
 .select2-dropdown
-	border: #{$form-border-width} solid #{$form-border-focus-color}
+	border: #{$form-border-width} solid #{$form-border-color--focus}
 	border-radius: 0
 	z-index: 9999
 
