--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -172,6 +172,15 @@ $aside-width: 160px !default
 $footer-grid-space: 30px 0 !default // v h
 
 
+// Buttons
+// ==========================================================================
+
+$btn-bg-color: $base-color !default
+$btn-bg-hover-color: darken($btn-bg-color, 20%) !default
+$btn-text-color: white !default
+$btn-disabled-color: #ccc !default
+
+
 // Forms
 // ==========================================================================
 
@@ -183,12 +192,15 @@ $form-text-color: $text-color !default
 $form-placeholder-color: lighten($form-text-color, 50%) !default
 $form-bg-color: white !default
 $form-border-color: lighten($form-text-color, 70%) !default
-$form-border-focus-color: darken($form-border-color, 20%) !default
+// validation
 $form-error-color: red !default
 $form-success-color: lightseagreen !default
-$form-bottom-space: 3rem !default
-$form-bottom-space--mob: 2rem !default
-$form-gap: 40px !default
+// disabled
+$form-text-color--disabled: rgb(190, 190, 190) !default
+$form-bg-color--disabled: rgb(235, 235, 228) !default
+$form-border-color--disabled: rgb(235, 235, 228) !default
+// focus
+$form-border-color--focus: darken($form-border-color, 20%) !default
 
 // Fonts of forms
 $form-font-size: 16px !default
@@ -210,8 +222,17 @@ $form-letter-spacing: null !default
 =selects-font()
 	+inputs-font
 
-	//+media('<mob-lg')
-		font-size: 10px
+//+media('<mob-lg')
+	font-size: 10px
+
+// Layout of forms
+$form-border-width: 2px !default
+$form-input-space-vt: floor(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // верхний паддинг округляем в нижнюю сторону
+$form-input-space-vb: ceil(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // нижний паддинг округляем в верхнюю сторону
+$form-input-space-h: 18px !default
+$form-bottom-space: 3rem !default
+$form-bottom-space--mob: 2rem !default
+$form-gap: 40px !default
 
 // Vertical spaces
 =forms-space()
@@ -220,22 +241,15 @@ $form-letter-spacing: null !default
 	+media('<mob-lg')
 		margin: 0 0 $form-bottom-space--mob
 
-
-// Layout of forms
-$form-border-width: 2px !default
-$form-input-space-vt: floor(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // верхний паддинг округляем в нижнюю сторону
-$form-input-space-vb: ceil(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // нижний паддинг округляем в верхнюю сторону
-$form-input-space-h: 18px !default
-
 // Checkboxes
 // Radio Buttons
-$checkbox-color: #ff3aa3
+$checkbox-color: #ff3aa3 !default
 
 // Select
 $select-space-v: 12px !default
 $select-arrow-width: 40px !default
 $select-arrow-height: 100% !default
-$multiple-item-space: 3px
+$multiple-item-space: 3px !default
 
 // Style Selection
 =selectSelection()
@@ -264,16 +278,7 @@ $multiple-item-space: 3px
 
 =form-on-focus()
 	//color: $form-border-focus-color
-	border-color: $form-border-focus-color
-
-
-// Buttons
-// ==========================================================================
-
-$btn-bg-color: $base-color !default
-$btn-bg-hover-color: darken($btn-bg-color, 20%) !default
-$btn-text-color: white !default
-$btn-disabled-color: #ccc !default
+	border-color: $form-border-color--focus
 
 
 // Animation
