--- a/src/sass/forms/_forms.sass
+++ b/src/sass/forms/_forms.sass
@@ -23,7 +23,8 @@
 
 label, .label
 	+display-inline-block-top
-	//user-select: none
+	user-select: none
+	-webkit-tap-highlight-color: transparent !important
 
 	.label-holder &
 		margin-bottom: 0
@@ -61,6 +62,7 @@ label, .label
 	label
 		+truncate(100%)
 
+// some column
 .form-columnize
 	column-count: 2
 
@@ -70,23 +72,17 @@ label, .label
 .form-columnize, .form-columnize--3
 	column-gap: $form-gap
 
-	label
-		+truncate(100%)
-
 	+media('<mob-lg')
 		column-count: 1
 		column-gap: 0
 
-.form-group
-	margin-bottom: $bottom-space--md
+	label
+		+truncate(100%)
 
-	&:last-child
-		margin-bottom: 0
-
-.form-group-title
-	+font-bold
-	+font(18px, round-float(32/18, 2))
-	margin-bottom: $bottom-space
+	.input-wrap
+		display: inline-block
+		vertical-align: top
+		width: 100%
 
 /* forms layout end
 
@@ -114,12 +110,12 @@ label, .label
 
 #{$inputs-list}
 	display: block
-	padding: #{$form-input-space-vt} #{$form-input-space-h} #{$form-input-space-vb}
+	padding: $form-input-space-vt $form-input-space-h $form-input-space-vb
 	width: 100%
 	height: $form-input-height
 	background-color: $form-bg-color
 	box-shadow: none
-	border: #{$form-border-width} solid #{$form-border-color}
+	border: $form-border-width solid $form-border-color
 	cursor: pointer
 
 	// Стили для текста полей ввода прописываем отдельно через миксин,
@@ -138,8 +134,10 @@ label, .label
 		margin-bottom: 0
 
 textarea
-	min-height: 114px
-	height: 114px
+	$lines: 2
+	$height: round($form-line-height*$lines) + $form-input-space-vt + $form-input-space-vb + round($form-border-width*2)
+	min-height: $height
+	height: $height
 	resize: vertical
 
 // Placeholder
@@ -163,46 +161,53 @@ input, textarea
 		+placeholder
 			color: $form-text-color--disabled
 
-	//form hover
 	&:not([disabled]):not(.error):not(.success):not(.input--has-value)
+		//form hover
 		&:hover
 			border-color: $form-border-color--focus
 
-	//form focus
-	&:not([disabled]):not(.error):not(.success):not(.input--has-value)
+		//form focus
 		&:focus
 			border-color: $form-border-color--focus
 			cursor: text
 
 	// has value (js)
-	@at-root label, &
+	//style for label
+	@at-root label
 		&.input--has-value
 			+form-has-value
 
+	&.input--has-value:not([disabled])
+		+form-has-value
+
+	// on focus (js)
+	//&.input--focus
+		+form-on-focus
+
 	//form success
-	@at-root label, &
+	//style for label
+	@at-root label
 		&.success
 			+form-success
 
-	//form error placeholder
-	&.success
+	&.success:not([disabled])
+		+form-success
+
+		//form success placeholder
 		+placeholder
 			color: $form-success-color
 
 	//form error
-	@at-root label, &
+	@at-root label
 		&.error
 			+form-error
 
-	//form error placeholder
-	&.error
+	&.error:not([disabled])
+		+form-error
+
+		//form error placeholder
 		+placeholder
 			color: $form-error-color
-
-	// on focus (js)
-	// if need change label
-	//&.input--focus
-		+form-on-focus
 
 /* inputs states end
 
