--- a/src/sass/forms/_selects.sass
+++ b/src/sass/forms/_selects.sass
@@ -8,7 +8,7 @@
 		display: block
 		width: 100%
 
-.#{$user-content}, .select
+.#{$user-content}, .select, .#{$user-content} .select
 	select
 		+selectSelection
 		display: block
@@ -22,6 +22,9 @@
 		// чтобы была возможность добавить медиа развилки через тот же миксин
 		&
 			+selects-font
+
+.#{$user-content} select
+	padding-right: 0
 
 .#{$user-content} select, .select
 	+forms-space
@@ -43,38 +46,60 @@
 // States
 .#{$user-content} select, .select
 
-	//form hover
-	&:hover
-		border-color: $form-border-color--focus
+	&[disabled]
+		cursor: default
+		color: $form-text-color--disabled
+		background-color: $form-bg-color--disabled
+		border-color: $form-border-color--disabled
 
-	//form focus
-	&:focus
-		border-color: $form-border-color--focus
-		cursor: text
+		+placeholder
+			color: $form-text-color--disabled
+
+	&:not([disabled]):not(.error):not(.success):not(.input--has-value)
+		//form hover
+		&:hover
+			border-color: $form-border-color--focus
+
+		//form focus
+		&:focus
+			border-color: $form-border-color--focus
 
 	// has value (js)
-	&.input--has-value
+	//style for label
+	@at-root label
+		&.input--has-value
+			+form-has-value
+
+	&.input--has-value:not([disabled])
 		+form-has-value
 
+	// on focus (js)
+	//&.input--focus
+		+form-on-focus
+
 	//form success
-	&.success
+	//style for label
+	@at-root label
+		&.success
+			+form-success
+
+	&.success:not([disabled])
 		+form-success
 
-	//form error placeholder
-	+placeholder
-		color: $form-success-color
+		//form success placeholder
+		+placeholder
+			color: $form-success-color
 
 	//form error
-	&.error
+	@at-root label
+		&.error
+			+form-error
+
+	&.error:not([disabled])
 		+form-error
 
-	//form error placeholder
-	&.error
+		//form error placeholder
 		+placeholder
 			color: $form-error-color
-
-	// on focus (js)
-	&.input--focus
-		+form-on-focus
 
 /* select end
