--- a/src/sass/components/_bitrix-search.sass
+++ b/src/sass/components/_bitrix-search.sass
@@ -5,7 +5,7 @@
 /* bitrix default search page
 .search-page
 	font-size: round-float($font-size*0.85, 1)
-	margin-bottom: $bottom-space--lg
+	margin-bottom: $bottom-space--large
 
 	.pagination-wrap
 		margin-bottom: $bottom-space
