--- a/src/sass/forms/_forms.sass
+++ b/src/sass/forms/_forms.sass
@@ -86,21 +86,6 @@ label, .label
 
 /* forms layout end
 
-/* forms footer
-.form-footer
-	+clear
-
-	.form-buttons
-		float: left
-
-	.form-note
-		display: block
-		overflow: hidden
-		+font(14px, 22px)
-		min-height: 50px
-
-/* forms footer end
-
 // Input Fields
 // input[type="text"]
 // input[type="password"]
@@ -215,3 +200,4 @@ input, textarea
 @import selects
 @import select2
 @import validation
+@import captcha
