--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -40,9 +40,9 @@
 /* === BUTTON ===
 @import base/buttons
 /* === BUTTON end ===
-/* === FORM STYLES DEFAULT ===
+/* === FORM'S ELEMENTS ===
 @import forms/forms
-/* === FORM STYLES DEFAULT end ===
+/* === FORM'S ELEMENTS end ===
 
 /*======================================================*/
 /* COMMON
