--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -12,9 +12,9 @@ $breakpoints: ('desk-qhd': 2560px, 'desk-hd': 1920px, 'desk-lg': 1600px, 'desk-m
 // Fonts style
 // ==========================================================================
 $font-norm: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default
-$font-alt: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default
+$font-alt: Georgia, serif !default
 
-// Reset font-white and font-style
+// Reset font-weight and font-style
 // Use for font-face
 =font-reset()
 	font:
@@ -37,11 +37,16 @@ $font-alt: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Ari
 
 // Alternative font
 =font-alt()
-	font-family: $font-norm
+	font-family: $font-alt
 
 =font-alt-bold()
-	font-family: $font-norm
-	font-weight: 300
+	font-family: $font-alt
+	font-weight: bold
+
+=font-alt-bold-italic()
+	font-family: $font-alt
+	font-weight: bold
+	font-style: italic
 
 // Base
 // ==========================================================================
@@ -49,11 +54,13 @@ $font-alt: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Ari
 $font-size: 1.6rem !default
 $line-height: round-float(2.4rem/$font-size, 2) !default
 // ----------------------------------------------------
-$font-size--sm: 1.4rem !default
-$line-height--sm: round-float(2.4rem/$font-size--sm, 2) !default
+$font-size--small: 1.4rem !default
+$line-height--small: round-float(2.4rem/$font-size--small, 2) !default
 // ----------------------------------------------------
-$font-size--less: 1.2rem !default
-$line-height--less: round-float(2.0rem/$font-size--less, 2) !default
+$font-size--smallest: 1.2rem !default
+$line-height--smallest: round-float(2.0rem/$font-size--smallest, 2) !default
+// ----------------------------------------------------
+$letter-spacing: normal !default
 
 // Heading h1
 $font-size-h1: 4.8rem !default
@@ -64,6 +71,18 @@ $line-height-h1--md: round-float(4.8rem/$font-size-h1--md, 2) !default
 // ----------------------------------------------------
 $font-size-h1--sm: 3.0rem !default
 $line-height-h1--sm: round-float(4.2rem/$font-size-h1--sm, 2) !default
+// ----------------------------------------------------
+=font-h1()
+	font-size: $font-size-h1
+	line-height: $line-height-h1
+
+	+media('<tab-lg')
+		font-size: $font-size-h1--md
+		line-height: $line-height-h1--md
+
+	+media('<mob-lg')
+		font-size: $font-size-h1--sm
+		line-height: $line-height-h1--sm
 
 // Heading h2
 $font-size-h2: round-float($font-size-h1*3.6rem/4.8rem, 1) !default
@@ -74,6 +93,18 @@ $line-height-h2--md: round-float(($line-height-h1--md*1.02),2) !default
 // ----------------------------------------------------
 $font-size-h2--sm: round-float($font-size-h1--sm*0.87, 1) !default
 $line-height-h2--sm: round-float(($line-height-h1--sm*1.01),2) !default
+// ----------------------------------------------------
+=font-h2()
+	font-size: $font-size-h2
+	line-height: $line-height-h2
+
+	+media('<tab-lg')
+		font-size: $font-size-h2--md
+		line-height: $line-height-h2--md
+
+	+media('<mob-lg')
+		font-size: $font-size-h2--sm
+		line-height: $line-height-h2--sm
 
 // Heading h3
 $font-size-h3: round-float($font-size-h1*2.4rem/4.8rem, 1) !default
@@ -81,6 +112,14 @@ $line-height-h3: round-float(3.6rem/2.4rem, 2) !default
 // ----------------------------------------------------
 $font-size-h3--sm: round-float($font-size-h1--sm*0.73, 1) !default
 $line-height-h3--sm: round-float(($line-height-h1--sm*1.05),2) !default
+// ----------------------------------------------------
+=font-h3()
+	font-size: $font-size-h3
+	line-height: $line-height-h3
+
+	+media('<mob-lg')
+		font-size: $font-size-h3--sm
+		line-height: $line-height-h3--sm
 
 // Heading h4
 $font-size-h4: round-float($font-size-h1*1.8rem/4.8rem, 1) !default
@@ -96,10 +135,10 @@ $line-height-h6: round-float($line-height*1.25, 2) !default
 
 // Spaces
 $bottom-space: round-float($font-size*$line-height, 1) !default
-$bottom-space--lg: round-float($font-size*$line-height*3, 1) !default
-$bottom-space--md: round-float($font-size*$line-height*2.0, 1) !default
-$bottom-space--ml: round-float($font-size*$line-height*1.5, 1) !default
-$bottom-space--sm: round-float($font-size*$line-height*0.75, 1) !default
+$bottom-space--large: round-float($font-size*$line-height*3, 1) !default
+$bottom-space--medium: round-float($font-size*$line-height*2.0, 1) !default
+$bottom-space--middle: round-float($font-size*$line-height*1.5, 1) !default
+$bottom-space--small: round-float($font-size*$line-height*0.75, 1) !default
 
 
 // Colors
@@ -175,6 +214,7 @@ $footer-grid-space: 30px 0 !default // v h
 // Buttons
 // ==========================================================================
 
+$btn-height: 50px !default
 $btn-bg-color: $base-color !default
 $btn-bg-hover-color: darken($btn-bg-color, 20%) !default
 $btn-text-color: white !default
