--- a/src/sass/test-mixins.sass
+++ b/src/sass/test-mixins.sass
@@ -16,18 +16,18 @@
 	+padding-horizontal(nth($text-layout-space, 2))
 
 .mx-test .section
-	margin-bottom: $bottom-space--lg
+	margin-bottom: $bottom-space--large
 
 .mx-test .section__box
-	margin-bottom: $bottom-space--md
+	margin-bottom: $bottom-space--medium
 
 .mx-subtitle
 	+font-bold
-	margin-bottom: $bottom-space--sm
+	margin-bottom: $bottom-space--small
 	background-color: white
 
 	.mx-element &
-		padding: $bottom-space--sm
+		padding: $bottom-space--small
 
 .mx-element
 	background-color: darkolivegreen
