--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -175,6 +175,8 @@ $user-content: user-content !default
 // Layout
 // ==========================================================================
 
+// минимальная ширина сайта
+$page-layout-min: 320px !default
 // отступы для всего сайта
 $page-layout-space: 18px 20px !default // v h
 // максимальная ширина сайта
