--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -142,8 +142,10 @@ html
 	margin: 0 auto
 	//min-height: 100vh
 	//min-height: 100% // not support ie
-	height: 100%
-	overflow: hidden
+	//height: 100%
+	//overflow: hidden
+	//height: 100vh
+	min-height: 100vh
 	position: relative
 
 /* === LAYOUT end ===
