--- a/src/css/main.css
+++ b/src/css/main.css
@@ -603,8 +603,9 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em {
 	text-align: left;
 	width: calc(100% + 4px);
 	height: calc(100% + 4px);
-	-ms-transform: translate(-50%, -50%);
-	    transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	    -ms-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 	-o-object-fit: cover;
 	   object-fit: cover;
 	font-family: "object-fit: cover";
@@ -617,8 +618,9 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em {
 	padding-right: 0 !important;
 	padding-left: 0 !important;
 	margin: 0;
-	-ms-transform: translate(-50%, -50%);
-	    transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	    -ms-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 	z-index: 10;
 	font-size: 4.8rem;
 	line-height: 1.25;
@@ -749,37 +751,51 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em {
 /* content img end */
 /* columnize */
 .columnize, .columnize--3, .columnize--4 {
-	column-count: 2;
-	column-gap: 2em;
+	-webkit-column-count: 2;
+	   -moz-column-count: 2;
+	        column-count: 2;
+	-webkit-column-gap: 2em;
+	   -moz-column-gap: 2em;
+	        column-gap: 2em;
 	margin-bottom: 2.4rem;
 	font-size: 0.9em;
 }
 
 .columnize--3 {
-	column-count: 3;
+	-webkit-column-count: 3;
+	   -moz-column-count: 3;
+	        column-count: 3;
 	font-size: 0.85em;
 }
 
 .columnize--4 {
-	column-count: 4;
+	-webkit-column-count: 4;
+	   -moz-column-count: 4;
+	        column-count: 4;
 	font-size: 0.8em;
 }
 
 @media (max-width: 1199px) {
 	.columnize--4 {
-		column-count: 3;
+		-webkit-column-count: 3;
+		   -moz-column-count: 3;
+		        column-count: 3;
 	}
 }
 
 @media (max-width: 991px) {
 	.columnize--3, .columnize--4 {
-		column-count: 2;
+		-webkit-column-count: 2;
+		   -moz-column-count: 2;
+		        column-count: 2;
 	}
 }
 
 @media (max-width: 767px) {
 	.columnize, .columnize--3, .columnize--4 {
-		column-count: 1;
+		-webkit-column-count: 1;
+		   -moz-column-count: 1;
+		        column-count: 1;
 	}
 }
 
@@ -1263,8 +1279,9 @@ table td, table th {
 	top: 50%;
 	left: 50%;
 	border: 0 solid white;
-	-ms-transform: none;
-	    transform: none;
+	-webkit-transform: none;
+	    -ms-transform: none;
+	        transform: none;
 }
 
 .btn-with-arrow > i::before {
@@ -1279,8 +1296,9 @@ table td, table th {
 	width: 12px;
 	height: 12px;
 	border-width: 2px 0 0 2px;
-	-ms-transform: rotate(-45deg);
-	    transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
 	margin: 3px 0 0 -13px;
 }
 
@@ -1320,8 +1338,10 @@ table td, table th {
 	font-size: 0;
 	letter-spacing: -4px;
 	white-space: nowrap;
+	-webkit-transition-property: background-color, opacity, visibility;
 	transition-property: background-color, opacity, visibility;
-	transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 @media (max-width: 639px) {
@@ -1382,20 +1402,24 @@ table td, table th {
 	height: 3px;
 	border-radius: 2px;
 	background: #262626;
+	-webkit-transition-property: background-color;
 	transition-property: background-color;
-	transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 .btn-popup-close > i::before {
 	top: 0;
-	-ms-transform: rotate(-45deg);
-	    transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
 }
 
 .btn-popup-close > i::after {
 	top: 0;
-	-ms-transform: rotate(45deg);
-	    transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 }
 
 .no-touchevents .btn-popup-close:hover {
@@ -1491,21 +1515,31 @@ label, .label {
 }
 
 .form-columnize {
-	column-count: 2;
+	-webkit-column-count: 2;
+	   -moz-column-count: 2;
+	        column-count: 2;
 }
 
 .form-columnize--3 {
-	column-count: 3;
+	-webkit-column-count: 3;
+	   -moz-column-count: 3;
+	        column-count: 3;
 }
 
 .form-columnize, .form-columnize--3 {
-	column-gap: 40px;
+	-webkit-column-gap: 40px;
+	   -moz-column-gap: 40px;
+	        column-gap: 40px;
 }
 
 @media (max-width: 639px) {
 	.form-columnize, .form-columnize--3 {
-		column-count: 1;
-		column-gap: 0;
+		-webkit-column-count: 1;
+		   -moz-column-count: 1;
+		        column-count: 1;
+		-webkit-column-gap: 0;
+		   -moz-column-gap: 0;
+		        column-gap: 0;
 	}
 }
 
@@ -1563,28 +1597,33 @@ textarea {
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 	color: #cccccc;
+	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input:-moz-placeholder, textarea:-moz-placeholder {
 	color: #cccccc;
+	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
 	opacity: 1;
 	color: #cccccc;
+	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	opacity: 1;
 	color: #cccccc;
+	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
 input.placeholder, textarea.placeholder {
 	color: #cccccc;
+	-webkit-transition: 0.2s opacity;
 	transition: 0.2s opacity;
 }
 
@@ -1826,19 +1865,23 @@ input[type="checkbox"] ~ span::after {
 
 input[type="checkbox"] ~ label > span::before,
 input[type="checkbox"] ~ span::before {
-	-ms-transform: rotate(45deg);
-	    transform: rotate(45deg);
-	-ms-transform-origin: 0 10px;
-	    transform-origin: 0 10px;
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
+	-webkit-transform-origin: 0 10px;
+	    -ms-transform-origin: 0 10px;
+	        transform-origin: 0 10px;
 	z-index: 1;
 }
 
 input[type="checkbox"] ~ label > span::after,
 input[type="checkbox"] ~ span::after {
-	-ms-transform: rotate(-50deg);
-	    transform: rotate(-50deg);
-	-ms-transform-origin: 0 10px;
-	    transform-origin: 0 10px;
+	-webkit-transform: rotate(-50deg);
+	    -ms-transform: rotate(-50deg);
+	        transform: rotate(-50deg);
+	-webkit-transform-origin: 0 10px;
+	    -ms-transform-origin: 0 10px;
+	        transform-origin: 0 10px;
 	left: 22px;
 }
 
@@ -1917,9 +1960,12 @@ input[type="radio"] ~ i::after {
 	border-radius: 50%;
 	overflow: hidden;
 	background: #ff3aa3;
-	animation: bounceout 0s;
-	animation-iteration-count: 1;
-	animation-fill-mode: forwards;
+	-webkit-animation: bounceout 0s;
+	        animation: bounceout 0s;
+	-webkit-animation-iteration-count: 1;
+	        animation-iteration-count: 1;
+	-webkit-animation-fill-mode: forwards;
+	        animation-fill-mode: forwards;
 	opacity: 0;
 }
 
@@ -1934,38 +1980,82 @@ input[type="radio"]:checked ~ span::before {
 
 input[type="radio"]:checked ~ label > span::after,
 input[type="radio"]:checked ~ i::after {
-	animation: bounce 0.3s;
-	animation-iteration-count: 1;
+	-webkit-animation: bounce 0.3s;
+	        animation: bounce 0.3s;
+	-webkit-animation-iteration-count: 1;
+	        animation-iteration-count: 1;
 	opacity: 1;
 	background-color: #ff3aa3;
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
 	0% {
-		transform: scale(0.8);
+		-webkit-transform: scale(0.8);
+		        transform: scale(0.8);
 		opacity: 0.4;
 	}
 	50% {
-		transform: scale(1.4);
+		-webkit-transform: scale(1.4);
+		        transform: scale(1.4);
 		opacity: 1;
 	}
 	100% {
-		transform: scale(1);
+		-webkit-transform: scale(1);
+		        transform: scale(1);
 		opacity: 1;
+	}
+}
+
+@keyframes bounce {
+	0% {
+		-webkit-transform: scale(0.8);
+		        transform: scale(0.8);
+		opacity: 0.4;
+	}
+	50% {
+		-webkit-transform: scale(1.4);
+		        transform: scale(1.4);
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform: scale(1);
+		        transform: scale(1);
+		opacity: 1;
+	}
+}
+
+@-webkit-keyframes bounceout {
+	0% {
+		-webkit-transform: scale(0);
+		        transform: scale(0);
+		opacity: 1;
+	}
+	50% {
+		-webkit-transform: scale(1.4);
+		        transform: scale(1.4);
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform: scale(0);
+		        transform: scale(0);
+		opacity: 0.4;
 	}
 }
 
 @keyframes bounceout {
 	0% {
-		transform: scale(0);
+		-webkit-transform: scale(0);
+		        transform: scale(0);
 		opacity: 1;
 	}
 	50% {
-		transform: scale(1.4);
+		-webkit-transform: scale(1.4);
+		        transform: scale(1.4);
 		opacity: 1;
 	}
 	100% {
-		transform: scale(0);
+		-webkit-transform: scale(0);
+		        transform: scale(0);
 		opacity: 0.4;
 	}
 }
@@ -2227,14 +2317,16 @@ label.error {
 
 .select::before,
 .select2-container--default .select2-selection--single .select2-selection__arrow b::before {
-	-ms-transform: rotate(45deg);
-	    transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 }
 
 .select::after,
 .select2-container--default .select2-selection--single .select2-selection__arrow b::after {
-	-ms-transform: rotate(-45deg);
-	    transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
 	right: 17px;
 }
 
@@ -2647,8 +2739,10 @@ form .success + .select2 + .error-note + .success-note {
 	box-shadow: none;
 	opacity: 1;
 	z-index: 6;
+	-webkit-transition-property: background, opacity, visibility;
 	transition-property: background, opacity, visibility;
-	transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 .no-touchevents .slick-arrow:hover {
@@ -2679,8 +2773,9 @@ form .success + .select2 + .error-note + .success-note {
 	pointer-events: none;
 	width: 12px;
 	height: 12px;
-	-ms-transform: rotate(45deg);
-	    transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 	border: 0 solid #000;
 }
 
@@ -2737,8 +2832,12 @@ form .success + .select2 + .error-note + .success-note {
 	border-radius: 50%;
 	background: #ffa43f;
 	position: relative;
+	-webkit-transition-property: background, border, box-shadow, -webkit-transform;
+	transition-property: background, border, box-shadow, -webkit-transform;
 	transition-property: background, border, box-shadow, transform;
-	transition-duration: 0.6s;
+	transition-property: background, border, box-shadow, transform, -webkit-transform;
+	-webkit-transition-duration: 0.6s;
+	        transition-duration: 0.6s;
 }
 
 .slick-dots li button::before {
@@ -2752,8 +2851,12 @@ form .success + .select2 + .error-note + .success-note {
 	border-radius: 50%;
 	opacity: 1;
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+	-webkit-transition-property: opacity, -webkit-transform;
+	transition-property: opacity, -webkit-transform;
 	transition-property: transform, opacity;
-	transition-duration: 0.2s;
+	transition-property: transform, opacity, -webkit-transform;
+	-webkit-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 .slick-dots li.slick-active button::before {
@@ -2856,8 +2959,9 @@ form .success + .select2 + .error-note + .success-note {
 	right: 0;
 	left: auto;
 	top: 100%;
-	-ms-transform: translate(0, 0);
-	    transform: translate(0, 0);
+	-webkit-transform: translate(0, 0);
+	    -ms-transform: translate(0, 0);
+	        transform: translate(0, 0);
 }
 
 .images-slider .slick-prev {
@@ -2891,8 +2995,12 @@ form .success + .select2 + .error-note + .success-note {
 	border-radius: 50%;
 	background-color: white;
 	opacity: 0.5;
+	-webkit-transition-property: opacity, -webkit-transform;
+	transition-property: opacity, -webkit-transform;
 	transition-property: opacity, transform;
-	transition-duration: 0.2s;
+	transition-property: opacity, transform, -webkit-transform;
+	-webkit-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 .images-slider .slick-dots li button::before, .user-content .images-slider .slick-dots li button::before {
@@ -2905,8 +3013,9 @@ form .success + .select2 + .error-note + .success-note {
 
 .no-touchevents .images-slider .slick-dots li:hover button, .no-touchevents .user-content .images-slider .slick-dots li:hover button {
 	opacity: 1;
-	-ms-transform: scale(2);
-	    transform: scale(2);
+	-webkit-transform: scale(2);
+	    -ms-transform: scale(2);
+	        transform: scale(2);
 }
 
 /* images slider end */
@@ -3148,6 +3257,10 @@ html.css-scroll-fixed:not(.open-only-mob) {
 
 /* === LAYOUT === */
 .max-wrap {
+	max-width: 1920px;
+}
+
+.max-wrap.layout {
 	max-width: 1960px;
 }
 
@@ -3302,14 +3415,23 @@ html.css-scroll-fixed:not(.open-only-mob) {
 }
 
 .wrapper {
+	display: -webkit-box;
+	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-direction: column;
-	    flex-direction: column;
-	-ms-flex-pack: justify;
-	    justify-content: space-between;
-	-ms-flex-align: stretch;
-	    align-items: stretch;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: stretch;
+	-webkit-align-items: stretch;
+	    -ms-flex-align: stretch;
+	        align-items: stretch;
 	margin: 0 auto;
 	min-height: 100vh;
 	position: relative;
@@ -3318,10 +3440,13 @@ html.css-scroll-fixed:not(.open-only-mob) {
 /* === LAYOUT end === */
 /* === CONTENT === */
 .main {
-	-ms-flex-negative: 1;
-	    flex-shrink: 1;
-	-ms-flex-positive: 1;
-	    flex-grow: 1;
+	-webkit-flex-shrink: 1;
+	    -ms-flex-negative: 1;
+	        flex-shrink: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 	position: relative;
 	clear: both;
 	z-index: 4;
@@ -3421,8 +3546,9 @@ html.css-scroll-fixed:not(.open-only-mob) {
 	position: absolute;
 	right: 0;
 	top: 50%;
-	-ms-transform: translate(0, -50%);
-	    transform: translate(0, -50%);
+	-webkit-transform: translate(0, -50%);
+	    -ms-transform: translate(0, -50%);
+	        transform: translate(0, -50%);
 	line-height: 0;
 	pointer-events: none;
 }
@@ -3546,10 +3672,13 @@ li:hover > .nav__drop {
 
 .footer-bottom__holder {
 	position: relative;
+	display: -webkit-box;
+	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	    -ms-flex-wrap: wrap;
+	        flex-wrap: wrap;
 	margin-right: -15px;
 	margin-left: -15px;
 	margin-bottom: -14px;
@@ -3659,8 +3788,9 @@ li:hover > .nav__drop {
 }
 
 .no-touchevents a:hover .developer__logo::after {
-	-ms-transform: translate(0, -1px);
-	    transform: translate(0, -1px);
+	-webkit-transform: translate(0, -1px);
+	    -ms-transform: translate(0, -1px);
+	        transform: translate(0, -1px);
 }
 
 /* developer end */
@@ -3819,8 +3949,9 @@ li:hover > .nav__drop {
 		bottom: auto !important;
 		padding: 0 !important;
 		margin: 0 !important;
-		-ms-transform: none !important;
-		    transform: none !important;
+		-webkit-transform: none !important;
+		    -ms-transform: none !important;
+		        transform: none !important;
 		text-align: left !important;
 		border: none !important;
 		box-shadow: none !important;
